--- a/brucethekeyboard/readme
+++ b/brucethekeyboard/readme
@@ -1,2 +1,2 @@
-When printing the boxy bruce, you might need to clean up a bit behind the usb-c port (inside the keyboard).
+When printing the businessbruce, you might need to clean up a bit behind the usb-c port (inside the keyboard).
 Be careful before inserting the pcb!
